# -_4

./: README.md  main.py  pyproject.toml
data/: .gitignore
src/: hh_API.py  jsonsaver.py  utils.py  vacancy.py
tests/: test_hh_API.py  test_jsonsaver.py  test_vacancy.py
