[tool.poetry]
name = "course-work-4"
version = "0.1.0"
description = ""
authors = ["'Artem <'baza.a1@bk.ru'>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.0.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
